[package]
name = "rust-bot"
version = "0.1.0"
authors = ["Yamboy1 <yamboyd1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.7"
dotenv = "0.15.0"
regex = "1"
indexmap = "1.3.0"
itertools = "0.8.1"
